Bug #20466: a view is mixing data when there's a trigger on the table   When making a place to store field values at the start of each group   the real item (not the reference) must be used when deciding which column   to copy.